src/parser/NolifeParser.java
/* Generated By:JavaCC: Do not edit this line. NolifeParser.java */
package parser;

import ast.*;
import visitor.*;
import java.io.*;

public class NolifeParser implements NolifeParserConstants {

        private static ASTNodeFactory factory;

        public static void main(String args[]) {
                NolifeParser parser;
                java.io.InputStream input;

                if (args.length == 1) {
                        try {
                                input = new java.io.FileInputStream(args[args.length - 1]);
                        } catch (java.io.FileNotFoundException e) {
                                System.out.println("Filen not found.");
                                return;
                        }
                } else {
                        System.out.println("Usage: nsc <inputfile>");
                        return;
                }

                try {
                        factory = new ASTNodeFactory();
                        parser = new NolifeParser(input);
                        ASTNode node = parser.program();
                        TreeVisitor tv = new TreeVisitor();
                        node.accept(tv);
                        System.out.println(tv.getSource());
                } catch (ParseException e) {
                        System.err.println("Syntax Error: " + e.getMessage());
                }
        }

  static final public ASTNode program() throws ParseException {
        ASTNode programNode = (Program)factory.makeASTNode("Program");
        ASTNode compoundStatement = null;
        ASTNode varDeclsNode = null;
        Token progName = null;
    jj_consume_token(O_PROGRAM);
    progName = jj_consume_token(O_IDENTIFIER);
    jj_consume_token(O_SEMICOLON);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case O_VAR:
      varDeclsNode = decls();
                        programNode.addChild(varDeclsNode);
      break;
    default:
      jj_la1[0] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case O_FUNCTION:
    case O_PROCEDURE:
      subprogram_decls();
      break;
    default:
      jj_la1[1] = jj_gen;
      ;
    }
    compoundStatement = compound_stmt();
        programNode.setLabel(progName.image);
        programNode.addChild(compoundStatement);

        {if (true) return programNode;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode decls() throws ParseException {
        ASTNode varDeclsNode = null;
    jj_consume_token(O_VAR);
    varDeclsNode = decl_list();
                {if (true) return varDeclsNode;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode decl_list() throws ParseException {
        ASTNode declareNode = null;
        VariableDeclarations varDeclsNode = null;
                varDeclsNode = (VariableDeclarations)factory.makeASTNode("VariableDeclarations");
    label_1:
    while (true) {
      declareNode = identifier_list();
      jj_consume_token(O_COLON);
      declareNode = type(declareNode);
      jj_consume_token(O_SEMICOLON);
                        varDeclsNode.addChild(declareNode);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case O_IDENTIFIER:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_1;
      }
    }
                {if (true) return varDeclsNode;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode identifier_list() throws ParseException {
        Declare declareNode = null;
        IdDecl idDeclNode = null;
        Token id = null;
    id = jj_consume_token(O_IDENTIFIER);
                idDeclNode = (IdDecl)factory.makeASTNode("IdDecl");
                idDeclNode.setLabel(id.image);
                declareNode = (Declare)factory.makeASTNode("Declare");
                declareNode.addChild(idDeclNode);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case O_COMMA:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_2;
      }
      jj_consume_token(O_COMMA);
      id = jj_consume_token(O_IDENTIFIER);
                        idDeclNode = (IdDecl)factory.makeASTNode("IdDecl");
                        idDeclNode.setLabel(id.image);
                        declareNode.addChild(idDeclNode);
    }
                {if (true) return declareNode;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode type(ASTNode declareNode) throws ParseException {
        ASTNode typeNode = null;
        ASTNode newTypeNode = null;
        Declare newDeclareNode = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case O_CHARACTER:
    case O_FLOAT:
    case O_INTEGER:
      typeNode = standard_type();
                newDeclareNode = (Declare)factory.makeASTNode("Declare");

                if (typeNode instanceof TypeInteger) {
                        for (ASTNode n : declareNode.getChildren()) {
                                newTypeNode = (TypeInteger)factory.makeASTNode("TypeInteger");
                                newTypeNode.addChild(n);
                                newDeclareNode.addChild(newTypeNode);
                        }
                } else if (typeNode instanceof TypeFloat) {
                        for (ASTNode n : declareNode.getChildren()) {
                                newTypeNode = (TypeFloat)factory.makeASTNode("TypeFloat");
                                newTypeNode.addChild(n);
                                newDeclareNode.addChild(newTypeNode);
                         }
                } else if (typeNode instanceof TypeCharacter) {
                        for (ASTNode n : declareNode.getChildren()) {
                                newTypeNode = (TypeInteger)factory.makeASTNode("TypeCharacter");
                                newTypeNode.addChild(n);
                                newDeclareNode.addChild(newTypeNode);
                        }
                }

                {if (true) return newDeclareNode;}
      break;
    case O_ARRAY:
      typeNode = array_type();
                typeNode.getChild(0).addChild(0, declareNode.getChild(0));
                declareNode.removeChild(0);
                declareNode.addChild(typeNode);

                {if (true) return declareNode;}
      break;
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode standard_type() throws ParseException {
        Type typeNode = null;
        Token type = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case O_INTEGER:
      type = jj_consume_token(O_INTEGER);
                typeNode = (TypeInteger)factory.makeASTNode("TypeInteger");
      break;
    case O_FLOAT:
      type = jj_consume_token(O_FLOAT);
                typeNode = (TypeFloat)factory.makeASTNode("TypeFloat");
      break;
    case O_CHARACTER:
      type = jj_consume_token(O_CHARACTER);
                typeNode = (TypeCharacter)factory.makeASTNode("TypeCharacter");
      break;
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                {if (true) return typeNode;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode array_type() throws ParseException {
        ASTNode dimNode = null;
        ASTNode typeNode = null;
        ArrayDecl arrayDeclNode = null;
    jj_consume_token(O_ARRAY);
    jj_consume_token(O_LBRACKET);
    dimNode = dim();
    jj_consume_token(O_RBRACKET);
    jj_consume_token(O_OF);
    typeNode = standard_type();
        arrayDeclNode = (ArrayDecl)factory.makeASTNode("ArrayDecl");
        arrayDeclNode.addChild(dimNode.getChild(0));
        arrayDeclNode.addChild(dimNode.getChild(1));
        typeNode.addChild(arrayDeclNode);
                {if (true) return typeNode;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode dim() throws ParseException {
        Token minBound = null;
        Token maxBound = null;
        ASTNode dimNode = null;
        Expression minNode = null;
        Expression maxNode = null;
                dimNode = factory.makeASTNode("Subscript");
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case O_INT:
      minBound = jj_consume_token(O_INT);
      jj_consume_token(O_DOT);
      jj_consume_token(O_DOT);
      maxBound = jj_consume_token(O_INT);
                minNode = (ConstantInteger)factory.makeASTNode("ConstantInteger");
                minNode.setLabel(minBound.image);
                maxNode = (ConstantInteger)factory.makeASTNode("ConstantInteger");
                maxNode.setLabel(maxBound.image);
      break;
    case O_CHAR:
      minBound = jj_consume_token(O_CHAR);
      jj_consume_token(O_DOT);
      jj_consume_token(O_DOT);
      maxBound = jj_consume_token(O_CHAR);
                minNode = (ConstantCharacter)factory.makeASTNode("ConstantCharacter");
                minNode.setLabel(minBound.image);
                maxNode = (ConstantCharacter)factory.makeASTNode("ConstantCharacter");
                maxNode.setLabel(maxBound.image);
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                dimNode.addChild(minNode);
                dimNode.addChild(maxNode);
                {if (true) return dimNode;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode subprogram_decls() throws ParseException {
    label_3:
    while (true) {
      subprogram_decl();
      jj_consume_token(O_SEMICOLON);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case O_FUNCTION:
      case O_PROCEDURE:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_3;
      }
    }
                {if (true) return null;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode subprogram_decl() throws ParseException {
    subprogram_head();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case O_VAR:
      decls();
      break;
    default:
      jj_la1[8] = jj_gen;
      ;
    }
    compound_stmt();
                {if (true) return null;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode subprogram_head() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case O_FUNCTION:
      jj_consume_token(O_FUNCTION);
      jj_consume_token(O_IDENTIFIER);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case O_LPAREN:
        arguments();
        break;
      default:
        jj_la1[9] = jj_gen;
        ;
      }
      jj_consume_token(O_COLON);
      standard_type();
      jj_consume_token(O_SEMICOLON);
      break;
    case O_PROCEDURE:
      jj_consume_token(O_PROCEDURE);
      jj_consume_token(O_IDENTIFIER);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case O_LPAREN:
        arguments();
        break;
      default:
        jj_la1[10] = jj_gen;
        ;
      }
      jj_consume_token(O_SEMICOLON);
      break;
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                {if (true) return null;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode arguments() throws ParseException {
    jj_consume_token(O_LPAREN);
    parameter_list();
    jj_consume_token(O_RPAREN);
                {if (true) return null;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode parameter_list() throws ParseException {
        ASTNode declareNode = null;
    declareNode = identifier_list();
    jj_consume_token(O_COLON);
    declareNode = type(declareNode);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case O_SEMICOLON:
        ;
        break;
      default:
        jj_la1[12] = jj_gen;
        break label_4;
      }
      jj_consume_token(O_SEMICOLON);
      declareNode = identifier_list();
      jj_consume_token(O_COLON);
      declareNode = type(declareNode);
    }
                {if (true) return null;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode compound_stmt() throws ParseException {
        ASTNode statementList = null;
    jj_consume_token(O_BEGIN);
    statementList = stmt_list();
    jj_consume_token(O_END);
                {if (true) return statementList;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode stmt_list() throws ParseException {
        ASTNode statement = null;
        ASTNode compoundStatement = null;
    statement = stmt();
                compoundStatement = (CompoundStatement)factory.makeASTNode("CompoundStatement");
                compoundStatement.addChild(statement);
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case O_SEMICOLON:
        ;
        break;
      default:
        jj_la1[13] = jj_gen;
        break label_5;
      }
      jj_consume_token(O_SEMICOLON);
      statement = stmt();
                compoundStatement.addChild(statement);
    }
                {if (true) return compoundStatement;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode stmt() throws ParseException {
        ASTNode statement = null;
    if (jj_2_1(2)) {
      statement = assignment();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case O_IF:
        statement = if_stmt();
        break;
      case O_WHILE:
        statement = while_stmt();
        break;
      case O_IDENTIFIER:
        statement = procedure_invocation();
        break;
      case O_READ:
      case O_WRITE:
        statement = i_o_stmt();
        break;
      case O_BEGIN:
        statement = compound_stmt();
        break;
      case O_RETURN:
        statement = return_stmt();
        break;
      case O_CASE:
        statement = case_stmt();
        break;
      default:
        jj_la1[14] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
                {if (true) return statement;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode assignment() throws ParseException {
        ASTNode varNode = null;
        ASTNode exprNode = null;
        Assignment assignNode = null;
    varNode = variable();
    jj_consume_token(O_ASSIGN);
    exprNode = expr();
                assignNode = (Assignment)factory.makeASTNode("Assignment");
                assignNode.addChild(varNode);
                assignNode.addChild(exprNode);
                {if (true) return assignNode;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode if_stmt() throws ParseException {
        ASTNode exprNode = null;
        ASTNode statementNode = null;
        ASTNode elseNode = null;
        IfStatement ifNode = null;
    jj_consume_token(O_IF);
    exprNode = expr();
                ifNode = (IfStatement)factory.makeASTNode("IfStatement");
                ifNode.addChild(exprNode);
    jj_consume_token(O_THEN);
    statementNode = stmt();
                ifNode.addChild(statementNode);
    if (jj_2_2(2147483647)) {
      jj_consume_token(O_ELSE);
      elseNode = stmt();
    } else {
      ;
    }
                ifNode.addChild(elseNode);
                {if (true) return ifNode;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode while_stmt() throws ParseException {
        ASTNode exprNode = null;
        ASTNode statementNode = null;
        WhileStatement whileNode = null;
    jj_consume_token(O_WHILE);
    exprNode = expr();
                whileNode = (WhileStatement)factory.makeASTNode("WhileStatement");
                whileNode.addChild(exprNode);
    jj_consume_token(O_DO);
    statementNode = stmt();
                whileNode.addChild(statementNode);
                {if (true) return whileNode;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode procedure_invocation() throws ParseException {
        Token id = null;
        ASTNode exprListNode = null;
        Call callNode = null;
    id = jj_consume_token(O_IDENTIFIER);
    jj_consume_token(O_LPAREN);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case O_NOT:
    case O_LPAREN:
    case O_CHAR:
    case O_IDENTIFIER:
    case O_FLOATCON:
    case O_INT:
      exprListNode = expr_list();
      break;
    default:
      jj_la1[15] = jj_gen;
      ;
    }
    jj_consume_token(O_RPAREN);
                callNode = (Call)factory.makeASTNode("Call");
                callNode.setLabel(id.image);
                callNode.addChild(exprListNode);
                {if (true) return callNode;}
    throw new Error("Missing return statement in function");
  }
